// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseIcon when render with no additional props should match snapshot for error 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  color: #C7384F;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`CloseIcon when render with no additional props should match snapshot for info 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  color: #0073C2;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`CloseIcon when render with no additional props should match snapshot for success 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  color: #00B000;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`CloseIcon when render with no additional props should match snapshot for warning 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  color: #E96400;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`when in classic mode when rendered as default should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  background-color: #335c6d;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`when in classic mode when rendered as error should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  color: #C7384F;
  background-color: #fdf5f5;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`when in classic mode when rendered as help should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  background-color: #fffbf2;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`when in classic mode when rendered as info should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  color: #0073C2;
  background-color: #f3f8fe;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`when in classic mode when rendered as maintenance should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  background-color: #fff8f2;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`when in classic mode when rendered as new should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  background-color: #f7f5fa;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`when in classic mode when rendered as success should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  color: #00B000;
  background-color: #f6fbf6;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;

exports[`when in classic mode when rendered as warning should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 0 15px;
  width: 45px;
  border: none;
  color: #E96400;
  background-color: #fff8f2;
}

.c0 span {
  cursor: pointer;
}

.c0 span:before {
  font-size: 16px;
  display: block;
}

.c0:focus {
  outline: none;
}

.c0:focus span:before {
  padding: 5px;
  border: 2px solid #FFB500;
}

<button
  className="c0"
/>
`;
